Controls are correctly vertically positioned on small screens (fixes #112 and fixes #113)

--- a/banjir/assets/css/map.css
+++ b/banjir/assets/css/map.css
@@ -19,7 +19,8 @@
   .navbar-header img {
     margin-left: -10px;
   }
-  .timestamp, .leaflet-control-zoom{
+  .map.site .timestamp, 
+  .map.site .leaflet-control-zoom{
      margin-top: 38px !important;
   }
 }
